--- a/kitx-widget/src/main/res/values-zh/strings.xml
+++ b/kitx-widget/src/main/res/values-zh/strings.xml
@@ -17,5 +17,5 @@
     <string name="srl_footer_nothing">没有更多数据了</string>
 
     <string name="srl_content_empty">SmartRefreshLayout中没有找到内容视图。您是否忘记在xml布局文件中添加？</string>
-    <string name="srl_component_falsify" formatted="false">%s 虚假区域\n代表运行时拖动的高度【%.1fdp】 \n而不会显示任何东西</string>
+    <string name="srl_component_falsify" formatted="true">%1$s 虚假区域\n代表运行时拖动的高度【%2$.1fdp】 \n而不会显示任何东西</string>
 </resources>
