--- a/kitx-widget/src/main/res/values/strings.xml
+++ b/kitx-widget/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="srl_footer_nothing">No More Data</string>
 
     <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
-    <string name="srl_component_falsify" formatted="false">%s falsify area,\n Represents the height[%.1fdp] of drag at run time,\n It does not show anything.</string>
+    <string name="srl_component_falsify" formatted="true" >%1$s falsify area,\n Represents the height[%2$.1fdp] of drag at run time,\n It does not show anything.</string>
 
 </resources>
